--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
