--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modusreactapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sethrollins2k19.github.io/ModusReactApp",
+  "homepage": "https://sethrollins2k19.github.io/modusreactapp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -40,6 +40,9 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
