--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1",
+    "nouislider": "^14.1.1",
     "react": "^16.12.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
