--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modusreactapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sethrollins2k19.github.io/modusreactapp",
+  "homepage": "https://sethrollins2k19.github.io/ModusReactApp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
