--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "date-fns": "^2.10.0",
     "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1",
     "nouislider": "^14.1.1",
