--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "date-fns": "^2.10.0",
     "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1",
     "nouislider": "^14.1.1",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
